--- a/src/layout/wrapper.module.scss
+++ b/src/layout/wrapper.module.scss
@@ -8,5 +8,5 @@
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
 
-  box-shadow: #ddd6fe 0px 25px 20px -20px;
+  box-shadow: var(--color-shadow) 2.4px 2.4px 3.2px;
 }
