add contact page

--- a/src/main.scss
+++ b/src/main.scss
@@ -8,9 +8,9 @@
   --color-secondary: #c4b5fd; // violet 300
   --color-secondary-hover: #ddd6fe; // violet 200
 
-  --color-input-bg: #ddd6fe;
-  --color-button-bg: #020617;
-  --color-button-hover: #1e293b;
+  --color-input-bg: #ddd6fe; // violet 200
+  --color-button-bg: #020617; // slate 950
+  --color-button-hover: #1e293b; // slate 800
 
   --font-primary: 'DM Sans', sans-serif;
 }
