--- a/src/layout/pages/contact/contact.module.scss
+++ b/src/layout/pages/contact/contact.module.scss
@@ -7,6 +7,12 @@
   .colTwo {
     display: flex;
     justify-content: center;
+    flex-direction: column;
     align-items: center;
+  }
+
+  .heading {
+    font-size: 1.5rem;
+    text-align: center;
   }
 }
