--- a/src/layout/wrapper.module.scss
+++ b/src/layout/wrapper.module.scss
@@ -2,6 +2,7 @@
   max-width: 1400px;
   margin-left: auto;
   margin-right: auto;
+  transition: box-shadow 0.8s ease;
 
   padding-left: 1.5rem;
   padding-right: 1.5rem;
@@ -9,4 +10,8 @@
   padding-bottom: 1.5rem;
 
   box-shadow: var(--color-shadow) 2.4px 2.4px 3.2px;
+
+  &:hover {
+    box-shadow: var(--color-secondary) 2.4px 2.4px 3.2px;
+  }
 }
