--- a/src/components/form/form.module.scss
+++ b/src/components/form/form.module.scss
@@ -10,7 +10,7 @@
     width: 40rem;
     margin: 1rem 0;
     border-radius: 5px;
-    background: var(--color-input-bg);
+    background: #cbd5e1;
 
     &:focus {
       outline: none;
