add about page, add dynamic image component

--- a/src/components/accordion/projectsAccordion.module.scss
+++ b/src/components/accordion/projectsAccordion.module.scss
@@ -1,3 +1,22 @@
+.imageContainer {
+  height: 150px;
+  width: 150px;
+  overflow: hidden;
+  display: none;
+  margin-top: 1rem;
+
+  @media only screen and (max-width: 50em) {
+    display: block;
+  }
+
+  img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    object-position: left;
+  }
+}
+
 .projectLink {
   margin-top: 1rem;
   display: flex;
