--- a/src/layout/header/header.module.scss
+++ b/src/layout/header/header.module.scss
@@ -1,6 +1,7 @@
 .header {
   text-transform: uppercase;
   color: var(--color-primary);
+  margin-bottom: 5rem;
 
   display: flex;
   justify-content: space-between;
