--- a/src/layout/pages/contact/contact.module.scss
+++ b/src/layout/pages/contact/contact.module.scss
@@ -1,7 +1,14 @@
 .contact {
+  height: 100%;
+
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  height: 100%;
+
+  @media only screen and (max-width: 42.5em) {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
 
   .colOne,
   .colTwo {
@@ -9,6 +16,10 @@
     justify-content: center;
     flex-direction: column;
     align-items: center;
+
+    @media only screen and (max-width: 42.5em) {
+      margin-top: 4rem;
+    }
   }
 
   .heading {
