add favicon, code cleanup

--- a/src/components/form/form.module.scss
+++ b/src/components/form/form.module.scss
@@ -1,8 +1,9 @@
 .form {
+  font-size: var(--font-medium);
+  padding: 1rem;
+
   display: flex;
   flex-direction: column;
-  font-size: 1.6rem;
-  padding: 1rem;
 
   input,
   textarea {
