--- a/src/components/socialLinks/socialLinks.module.scss
+++ b/src/components/socialLinks/socialLinks.module.scss
@@ -1,5 +1,6 @@
 .socialLinks {
   list-style: none;
+
   li {
     cursor: pointer;
     display: inline-block;
@@ -24,7 +25,7 @@
     }
 
     p {
-      font-size: 1.5rem;
+      font-size: var(--font-medium);
     }
   }
 }
