--- a/src/layout/header/header.module.scss
+++ b/src/layout/header/header.module.scss
@@ -8,7 +8,11 @@
   align-items: center;
 
   h1 {
-    font-size: 2.5rem;
+    font-size: var(--font-heading-main);
+  }
+
+  h2 {
+    font-size: var(--font-heading-sub);
   }
 
   h1,
