--- a/src/layout/pages/about/about.module.scss
+++ b/src/layout/pages/about/about.module.scss
@@ -7,33 +7,26 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 5rem;
   }
 
   .colOne {
+    font-size: var(--font-medium);
+
     display: flex;
     flex-direction: column;
     justify-content: center;
 
     h4 {
-      font-size: 2.4rem;
+      font-size: var(--font-large);
       font-weight: 400;
       margin-bottom: 1rem;
-
-      @media only screen and (max-width: 42.5em) {
-        font-size: 2rem;
-      }
     }
 
-    p {
-      font-size: 1.6rem;
+    .cta {
+      color: var(--color-secondary);
 
-      .cta {
-        color: var(--color-secondary);
-
-        &:hover {
-          color: var(--color-secondary-hover);
-        }
+      &:hover {
+        color: var(--color-secondary-hover);
       }
     }
   }
