--- a/src/layout/pages/home/home.module.scss
+++ b/src/layout/pages/home/home.module.scss
@@ -3,19 +3,12 @@
   flex-direction: column;
   justify-content: center;
   height: 100%;
-
-  h2,
-  h3 {
-    font-size: 2rem;
-    font-weight: 300;
-    text-align: left;
-  }
+  font-size: var(--font-large);
 
   .cta {
     margin-top: 1rem;
 
     a {
-      font-size: 1.8rem;
       color: var(--color-secondary);
 
       &:after {
