--- a/src/main.scss
+++ b/src/main.scss
@@ -9,6 +9,12 @@
   --color-secondary-hover: #ddd6fe; // violet 200
 
   --font-primary: 'DM Sans', sans-serif;
+
+  --font-heading-main: 2.5rem;
+  --font-heading-sub: 1.7rem;
+  --font-large: 1.8rem;
+  --font-medium: 1.6rem;
+  --font-small: 1.4rem;
 }
 
 // Break points
