--- a/src/components/form/contactForm.scss
+++ b/src/components/form/contactForm.scss
@@ -39,4 +39,23 @@
       background: var(--color-shadow);
     }
   }
+
+  .error-message {
+    font-style: italic;
+    margin-bottom: 1rem;
+    font-size: var(--font-small);
+    color: var(--color-secondary);
+  }
+
+  .is-invalid {
+    border: 2px solid var(--color-secondary);
+  }
+}
+
+.form-submitted {
+  height: 50dvh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
