add mobile projects fix

--- a/src/layout/pages/projects/projects.module.scss
+++ b/src/layout/pages/projects/projects.module.scss
@@ -2,8 +2,10 @@
   display: grid;
   grid-template-columns: 40% 60%;
   height: 100%;
+  overflow-y: auto;
 
   @media only screen and (max-width: 50em) {
+    height: auto;
     display: flex;
   }
 
