--- a/src/components/accordion/projectsAccordion.module.scss
+++ b/src/components/accordion/projectsAccordion.module.scss
@@ -3,7 +3,8 @@
   width: 150px;
   overflow: hidden;
   display: none;
-  margin-top: 1rem;
+  margin-top: 2rem;
+  border-radius: 5px;
 
   @media only screen and (max-width: 50em) {
     display: block;
