reduce contact svg size, add margin bottom contact col 2

--- a/src/components/socialLinks/socialLinks.module.scss
+++ b/src/components/socialLinks/socialLinks.module.scss
@@ -14,8 +14,8 @@
 
     a {
       img {
-        height: 40px;
-        width: 40px;
+        height: 3.5rem;
+        width: 3.5rem;
         transition: all 0.2s ease;
       }
     }
