--- a/src/components/accordion/projectsAccordion.module.scss
+++ b/src/components/accordion/projectsAccordion.module.scss
@@ -1,3 +1,30 @@
+.categories {
+  margin-bottom: 4rem;
+  color: var(--color-secondary);
+
+  p {
+    cursor: pointer;
+    font-size: var(--font-medium);
+    display: inline-block;
+    margin-right: 1.5rem;
+    transition: all 0.2s ease;
+
+    &:hover {
+      color: var(--color-secondary-hover);
+    }
+  }
+
+  .active {
+    transform: scale(1.03);
+    color: var(--color-secondary-hover);
+    border-bottom: 1px solid var(--color-secondary-hover);
+  }
+}
+
+.accordion {
+  min-height: 60rem;
+}
+
 .imageContainer {
   height: 150px;
   width: 150px;
