reduce form size on mobile

--- a/src/components/form/contactForm.scss
+++ b/src/components/form/contactForm.scss
@@ -17,11 +17,19 @@
       outline: none;
       border: 2px solid var(--color-secondary);
     }
+
+    @media only screen and (max-width: 42.5em) {
+      width: 38rem;
+    }
   }
 
   textarea {
     resize: none;
     height: 20rem;
+
+    @media only screen and (max-width: 42.5em) {
+      height: 15rem;
+    }
   }
 
   button {
