add link to home page on heading

--- a/src/layout/header/header.module.scss
+++ b/src/layout/header/header.module.scss
@@ -1,6 +1,7 @@
 .header {
   text-transform: uppercase;
   color: var(--color-primary);
+  transition: all 0.4s ease;
 
   display: flex;
   justify-content: space-between;
