--- a/src/components/form/contactForm.scss
+++ b/src/components/form/contactForm.scss
@@ -12,6 +12,7 @@
     margin: 1rem 0;
     border-radius: 5px;
     background: #cbd5e1;
+    font-size: var(--font-medium);
 
     &:focus {
       outline: none;
